--- a/package.json
+++ b/package.json
@@ -18,15 +18,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "express-jwt": "^6.0.0",
-    "express-validator": "^6.11.1",
     "graphql": "^15.5.0",
-    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
-    "nodemon": "^2.0.7",
-    "validator": "^13.6.0"
+    "nodemon": "^2.0.7"
   }
 }
