--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "node-gql-react-crud",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
+    "test-server": "mocha backend/**/*.login.js",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -24,5 +25,11 @@
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.0.0",
+    "should": "^13.2.3"
   }
 }
