--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "node-gql-react-crud",
   "version": "0.0.1",
   "description": "node-gql-react-crud",
-  "main": "server.js",
+  "main": "backend/server.js",
   "scripts": {
     "test": "mocha",
-    "test-server": "mocha backend/**/*.login.js",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node backend/server",
+    "dev": "nodemon backend/server"
   },
   "keywords": [],
   "author": "",
@@ -23,13 +22,13 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
-    "node-geocoder": "^3.27.0",
-    "nodemon": "^2.0.7"
+    "node-geocoder": "^3.27.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "mocha": "^9.0.0",
+    "nodemon": "^2.0.7",
     "should": "^13.2.3"
   }
 }
